# Mscan

./: README.md
app/: .pylintrc  README.md  main.py  nwpy.py  pyproject.toml  requirements.txt
app/mscan/: main.py  settings.py
app/mscan/scanner/: arp.py  interface.py  multi_ping.py  network.py  ping.py  platform_detector.py  scanner.py
app/scanner/: arp.py  interface.py  multi_ping.py  ping.py  platform_detector.py  scanner.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: Api.ts  App.tsx  index.css  index.tsx  react-app-env.d.ts  utils.ts
ui/src/components/: Card.tsx  ErrorModal.tsx  Report.tsx  ResultCard.tsx  ResultCards.tsx  SelectInterface.tsx
